Update README
Add instruction for javafx and game launch from terminal